--- a/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
@@ -5,6 +5,17 @@
   margin-top: 20px;
 }
 
+.index-filter-button .icon-chevron-right {
+  transform: rotate(0);
+  transition: .3s ease-in-out;
+  margin-bottom: 0;
+}
+
+.collapsed .icon-chevron-right {
+  transform: rotate(90deg);
+  transition: .3s ease-in-out;
+}
+
 .index-filter-button {
   font-size: $font-size-sm;
   .glyphicon {
