--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -4,11 +4,11 @@
     <div class="col-3 col-sm-4 p-0 d-lg-none">
       <button
         id="sidebar-open"
-        class="navbar-toggler h-100"
+        class="navbar-toggler h-100 text-light"
         type="button"
         aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="icon icon-menu icon-white icon-lg"></i>
       </button>
     </div>
     <div class="col text-center text-lg-left">
@@ -19,7 +19,7 @@
       ) %>
     </div>
 
-    <div class="col-3 col-sm-4 text-right">
+    <div class="col-3 col-sm-4 text-right p-0">
       <%= render partial: 'spree/admin/shared/account_nav' %>
     </div>
   </nav>
