--- a/backend/app/views/spree/admin/orders/_store_form.html.erb
+++ b/backend/app/views/spree/admin/orders/_store_form.html.erb
@@ -11,7 +11,7 @@
     <div class="form-actions" data-hook="buttons">
       <%= button Spree.t('actions.update'), 'refresh', 'submit', {class: 'btn-success', data: { disable_with: "#{ Spree.t(:saving) }..." }} %>
       <span class="or"><%= Spree.t(:or) %></span>
-      <%= button_link_to Spree.t('actions.cancel'), edit_admin_order_url(order), icon: 'delete' %>
+      <%= button_link_to Spree.t('actions.cancel'), edit_admin_order_url(order), icon: 'close' %>
     </div>
     <fieldset>
   <% end %>
