--- a/backend/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/backend/app/views/spree/admin/shared/_main_menu.html.erb
@@ -2,53 +2,53 @@
   <div class="text-right d-lg-none p-2 border-bottom">
     <button
       id="sidebar-close"
-      class="btn btn-outline-secondary"
+      class="btn btn-link"
       type="button"
       aria-expanded="false"
       aria-label="Toggle navigation">
-      <%= Spree.t(:close) %>
+      <i class="icon icon-close icon-lg"></i>
     </button>
   </div>
 
   <% if can? :admin, Spree::Order %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= tab *Spree::BackendConfiguration::ORDER_TABS, icon: 'shopping-cart' %>
+      <%= tab *Spree::BackendConfiguration::ORDER_TABS, icon: 'orders-list' %>
     </ul>
   <% end %>
 
   <% if can?(:admin, Spree::ReturnAuthorization) || can?(:admin, Spree::CustomerReturn) %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= main_menu_tree Spree.t(:returns), icon: "transfer", sub_menu: "returns", url: "#sidebar-returns" %>
+      <%= main_menu_tree Spree.t(:returns), icon: "returns", sub_menu: "returns", url: "#sidebar-returns" %>
     </ul>
   <% end %>
 
   <% if can? :admin, Spree::Product %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= main_menu_tree Spree.t(:products), icon: "th-large", sub_menu: "product", url: "#sidebar-product" %>
+      <%= main_menu_tree Spree.t(:products), icon: "products", sub_menu: "product", url: "#sidebar-product" %>
     </ul>
   <% end %>
 
   <% if can? :admin, Spree::Admin::ReportsController %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= tab *Spree::BackendConfiguration::REPORT_TABS, icon: 'file'  %>
+      <%= tab *Spree::BackendConfiguration::REPORT_TABS, icon: 'report'  %>
     </ul>
   <% end %>
 
   <% if can? :admin, Spree::Promotion %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= main_menu_tree Spree.t(:promotions), icon: "gift", sub_menu: "promotion", url: "#sidebar-promotions" %>
+      <%= main_menu_tree Spree.t(:promotions), icon: "promotion", sub_menu: "promotion", url: "#sidebar-promotions" %>
     </ul>
   <% end %>
 
   <% if Spree.user_class && can?(:admin, Spree.user_class) %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= tab *Spree::BackendConfiguration::USER_TABS, url: spree.admin_users_path, icon: 'user' %>
+      <%= tab *Spree::BackendConfiguration::USER_TABS, url: spree.admin_users_path, icon: 'users' %>
     </ul>
   <% end %>
 
   <% if can? :admin, current_store %>
     <ul class="nav nav-sidebar border-bottom">
-      <%= main_menu_tree Spree.t(:configurations), icon: "wrench", sub_menu: "configuration", url: "#sidebar-configuration" %>
+      <%= main_menu_tree Spree.t(:configurations), icon: "settings", sub_menu: "configuration", url: "#sidebar-configuration" %>
     </ul>
   <% end %>
 </nav>
