--- a/backend/app/views/spree/admin/shared/_order_tabs.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_tabs.html.erb
@@ -7,7 +7,7 @@
   <ul class="nav flex-column nav-pills" data-hook="admin_order_tabs">
     <% if ((can? :update, @order) && (@order.shipments.size.zero? || @order.shipments.shipped.size.zero?)) %>
       <li data-hook='admin_order_tabs_cart_details'>
-        <%= link_to_with_icon 'edit',
+        <%= link_to_with_icon 'shopping-cart',
           Spree.t(:cart),
           cart_admin_order_url(@order),
           class: "#{'active' if current == :cart} nav-link" %>
@@ -16,7 +16,7 @@
 
     <% if ((can?(:update, @order) && can?(:read, Spree::Store)) && (@order.shipments.size.zero? || @order.shipments.shipped.size.zero?)) %>
       <li data-hook='admin_order_tabs_store_details'>
-        <%= link_to_with_icon 'home',
+        <%= link_to_with_icon 'store',
           Spree.t(:store),
           store_admin_order_url(@order),
           class: "#{'active' if current == :store} nav-link" %>
@@ -34,7 +34,7 @@
 
     <% if can? :update, @order %>
       <li data-hook='admin_order_tabs_shipment_details'>
-        <%= link_to_with_icon 'road',
+        <%= link_to_with_icon 'shipping',
           Spree.t(:shipments),
           edit_admin_order_url(@order),
           class: "#{'active' if current == :shipments} nav-link" %>
@@ -43,7 +43,7 @@
 
     <% if can? :index, Spree::Adjustment %>
       <li data-hook='admin_order_tabs_adjustments'>
-        <%= link_to_with_icon 'wrench',
+        <%= link_to_with_icon 'adjustments',
           Spree.t(:adjustments),
           spree.admin_order_adjustments_url(@order),
           class: "#{'active' if current == :adjustments} nav-link" %>
@@ -62,7 +62,7 @@
     <% if can? :index, Spree::ReturnAuthorization %>
       <% if @order.completed? %>
         <li data-hook='admin_order_tabs_return_authorizations'>
-          <%= link_to_with_icon 'transfer',
+          <%= link_to_with_icon 'exclamation-mark-triangle',
             Spree.t(:return_authorizations),
             spree.admin_order_return_authorizations_url(@order),
             class: "#{'active' if current == :return_authorizations} nav-link" %>
@@ -73,7 +73,7 @@
     <% if can? :index, Spree::CustomerReturn %>
       <% if @order.completed? %>
         <li>
-          <%= link_to_with_icon 'transfer',
+          <%= link_to_with_icon 'returns',
             Spree.t(:customer_returns),
             spree.admin_order_customer_returns_url(@order),
             class: "#{'active' if current == :customer_returns} nav-link" %>
@@ -83,7 +83,7 @@
 
     <% if can? :update, @order %>
       <li data-hook='admin_order_tabs_state_changes'>
-        <%= link_to_with_icon 'refresh',
+        <%= link_to_with_icon 'save',
           Spree::StateChange.human_attribute_name(:state_changes),
           spree.admin_order_state_changes_url(@order),
           class: "#{'active' if current == :state_changes} nav-link" %>
