--- a/backend/app/assets/stylesheets/spree/backend/components/_taxon_products_view.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_taxon_products_view.scss
@@ -11,56 +11,18 @@
       float: left;
       width: 18%;
       margin-bottom: 2%;
-      padding: 8px 8px 5px 8px;
       border-radius: 4px;
+      min-width: 12rem;
+      max-width: 14rem;
       background: #f4f4f4;
-      .well {
-        padding-bottom: 12px;
-      }
-      .sort-handle {
-        position: absolute;
-        top: 14px;
-        left: 16px;
-        color: $gray-500;
-        cursor: move;
-      }
-      .btn-group {
-        display: none;
-        position: absolute;
-        top: 14px;
-        right: 16px;
-        .btn {
-          padding: 2px 7px;
-        }
-        .dropdown-menu {
-          left: auto;
-          right: 0;
-        }
-        a.delete-product {
-          color: red;
-        }
-      }
+
       .image {
-	height: 191px;
         .thumbnail {
-	  max-height: 180px;
-          margin-bottom: 8px;
-          display: inline-block;
           width: 100%;
         }
       }
       .product-info {
-        margin-bottom: 0.3em;
-        font-size: 0.9em;
-        div.name {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          font-weight: bold;
-        }
-        div.price {
-          color: $gray-500;
-        }
+        font-size: 0.8em;
       }
       &:hover {
         .btn-group {
