--- a/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
@@ -18,9 +18,6 @@
 
 .index-filter-button {
   font-size: $font-size-sm;
-  .glyphicon {
-    color: $gray-800;
-  }
 
   button {
     height: 100%;
@@ -43,5 +40,14 @@
     font-size: $font-size-sm;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+  }
+}
+
+.sort_link {
+  .icon {
+    margin-left: 5px;
+    width: 0.9rem;
+    height: 0.9rem;
+
   }
 }
