--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -67,11 +67,18 @@
 
 .select2-drop-above,
 .select2-dropdown-open.select2-drop-above .select2-choice,
-.select2-dropdown-open .select2-choice,
+.select2-dropdown-open .select2-choice {
+  border-color: lighten($success, 20);
+  border-bottom: none !important;
+  border-radius: $border-radius $border-radius 0 0 ;
+}
+
 .select2-drop.select2-drop-above.select2-drop-active,
 .select2-drop.select2-drop-active {
   border-color: lighten($success, 20);
+  border-top: none;
 }
+
 
 .select2-result-label {
   color: $gray-900;
@@ -106,12 +113,7 @@
       padding: 7px;
 
       .select2-search-choice-close {
-        @extend .glyphicon;
-        @extend .glyphicon-remove;
-
-        background-image: none !important;
-        font-size: 100%;
-        color: white !important;
+        @extend .icon-close ;
         position: absolute;
         left: 7px;
         top: 7px;
@@ -126,7 +128,59 @@
   &.select2-container-active {
     .select2-choices {
       box-shadow: none;
-      border-color: lighten($success, 20);
+
     }
   }
 }
+
+
+.select2-search input,
+.select2-search-choice-close,
+.select2-container .select2-choice abbr,
+.select2-container .select2-choice .select2-arrow b {
+    background-size: 0.8rem !important;
+}
+
+
+.select2-container.select2-allowclear .select2-choice abbr{
+  @extend .icon-close ;
+  overflow: hidden !important;
+  vertical-align: middle !important;
+  background-repeat: no-repeat !important;
+  background-size: 1rem !important;
+  background-position: 50% !important;
+  right:30px;
+}
+
+  .select2-container .select2-choice .select2-arrow {
+    width: 24px;
+  }
+
+  .select2-search input {
+    @extend .icon-search ;
+    overflow: hidden !important;
+    vertical-align: middle !important;
+    background-repeat: no-repeat !important;
+    background-size: 1rem !important;
+    background-position: 99% !important;
+  }
+
+  .select2-container .select2-choice .select2-arrow b {
+    @extend .icon-chevron-down ;
+    overflow: hidden !important;
+    vertical-align: middle !important;
+    background-repeat: no-repeat !important;
+    background-size: 1rem !important;
+    background-position: 54% !important;
+  }
+
+  .select2-container-multi .select2-choices .select2-search-choice .select2-search-choice-close:hover {
+    @extend .icon-white ;
+    background-position: 50% !important;
+  }
+
+  .select2-offscreen, .select2-offscreen:focus {
+    width: 0px !important;
+    height: 0px !important;
+    visibility: hidden !important;
+  }
