--- a/backend/app/assets/stylesheets/spree/backend/plugins/_jquery_ui.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_jquery_ui.scss
@@ -32,13 +32,15 @@
     color: $primary;
 
     &.ui-icon-circle-triangle-w {
-      // @extend .glyphicon;
-      // @extend .glyphicon-chevron-left;
+      color: transparent;
+      @extend .icon ;
+      @extend .icon-chevron-left ;
     }
 
     &.ui-icon-circle-triangle-e {
-      // @extend .glyphicon;
-      // @extend .glyphicon-chevron-right;
+      color: transparent;
+      @extend .icon ;
+      @extend .icon-chevron-right ;
     }
   }
 
