--- a/backend/app/views/spree/admin/option_types/index.html.erb
+++ b/backend/app/views/spree/admin/option_types/index.html.erb
@@ -14,7 +14,7 @@
 <table class="table sortable" id="listing_option_types" data-hook data-sortable-link="<%= update_positions_admin_option_types_url %>">
   <thead>
     <tr data-hook="option_header">
-      <th class="no-border"></th>
+      <th class="no-border handel-head"></th>
       <th><%= Spree.t(:name) %></th>
       <th><%= Spree.t(:presentation) %></th>
       <th class="actions"></th>
@@ -24,7 +24,7 @@
     <% @option_types.each do |option_type| %>
       <tr class="spree_option_type <%= cycle('odd', 'even')%>" id="<%= spree_dom_id option_type %>" data-hook="option_row">
         <td class="move-handle text-center">
-          <span class="icon icon-move handle"></span>
+          <span class="icon icon-move handle icon-md"></span>
         </td>
         <td><%= option_type.name %></td>
         <td class="presentation"><%= option_type.presentation %></td>
