--- a/backend/app/views/spree/admin/option_types/index.html.erb
+++ b/backend/app/views/spree/admin/option_types/index.html.erb
@@ -24,7 +24,7 @@
     <% @option_types.each do |option_type| %>
       <tr class="spree_option_type <%= cycle('odd', 'even')%>" id="<%= spree_dom_id option_type %>" data-hook="option_row">
         <td class="move-handle text-center">
-          <span class="icon icon-move handle icon-md"></span>
+          <span class="icon icon-sort handle icon-md"></span>
         </td>
         <td><%= option_type.name %></td>
         <td class="presentation"><%= option_type.presentation %></td>
