Use Sortable.js & fix issue with reordered items not saving.

--- a/backend/app/views/spree/admin/option_types/edit.html.erb
+++ b/backend/app/views/spree/admin/option_types/edit.html.erb
@@ -29,7 +29,7 @@
           <th class="actions"></th>
         </tr>
       </thead>
-      <tbody id="option_values">
+      <tbody id="sortVert">
         <% if @option_type.option_values.empty? %>
           <tr id="none" data-hook="option_none">
             <td colspan="2"><%= Spree.t(:none) %></td>
