--- a/backend/app/views/spree/admin/option_types/_option_value_fields.html.erb
+++ b/backend/app/views/spree/admin/option_types/_option_value_fields.html.erb
@@ -1,6 +1,6 @@
 <tr class="option_value fields" id="spree_<%= dom_id(f.object) %>" data-hook="option_value">
   <td class="move-handle text-center">
-    <span class="icon icon-sort handle"></span>
+    <span class="icon icon-sort handle icon-md"></span>
     <%= f.hidden_field :id %>
   </td>
   <td class="name"><%= f.text_field :name, class: "form-control" %></td>
