improve mouse cursor for movables

--- a/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
@@ -1,6 +1,10 @@
 table.table {
   font-size: $font-size-sm;
 
+  .move-handle {
+    cursor: grab;
+  }
+
   th.handel-head {
     width: 50px;
   }
