--- a/backend/app/views/spree/admin/products/_autocomplete.js.erb
+++ b/backend/app/views/spree/admin/products/_autocomplete.js.erb
@@ -1,10 +1,22 @@
 <script type='text/template' id='product_template'>
-  <li id="product_{{ product.id }}" data-product-id='{{ product.id }}' data-taxons="{{ product.taxon_ids }}" class="product card p-2">
-    <nav class="navbar navbar-light bg-light justify-content-between px-0 pt-0" style="background-color:transparent !important;">
-      <a class=" sort-handle js-sort-handle">
-        <span class="icon icon-move icon-lg"></span>
-      </a>
-      <div>
+  <li id="product_{{ product.id }}" data-product-id='{{ product.id }}' data-taxons="{{ product.taxon_ids }}" class="product p-2 col-6 col-md-3 col-lg-2">
+    <div class="m-1 p-2 card bg-light">
+      <nav class="navbar navbar-light bg-light justify-content-between px-0 pt-0" style="background-color:transparent !important;">
+        <a class=" sort-handle js-sort-handle">
+          <span class="icon icon-move icon-lg"></span>
+        </a>
+      </nav>
+      <div class='image'>
+        {{#if product.image }}
+          <img src='{{product.image}}' alt='{{ product.name }}' class='thumbnail rounded border border' />
+        {{ else }}
+          <img src='<%= image_path("noimage/small.png") %>' alt='{{product.name }}' class='thumbnail' />
+        {{/if}}
+      </div>
+      <div class="p-0 pt-1 text-center product-info">
+        <p class="price card-text">{{ product.name }}</p>
+      </div>
+      <div class="text-center">
         <a href="{{ edit_product_url product.id }}" class="btn btn-primary edit-product js-edit-product">
           <span class="icon icon-edit"></span>
         </a>
@@ -12,16 +24,7 @@
           <span class="icon icon-close"></span>
         </a>
       </div>
-    </nav>
-    <div class='image'>
-      {{#if product.image }}
-        <img src='{{product.image}}' alt='{{ product.name }}' class='thumbnail rounded border border' />
-      {{ else }}
-        <img src='<%= image_path("noimage/small.png") %>' alt='{{product.name }}' class='thumbnail' />
-      {{/if}}
-    </div>
-    <div class="p-0 pt-1 text-center product-info">
-      <p class="price card-text">{{ product.name }}</p>
+
     </div>
   </li>
 </script>
