--- a/backend/app/views/spree/layouts/admin.html.erb
+++ b/backend/app/views/spree/layouts/admin.html.erb
@@ -43,37 +43,38 @@
         <%# Content                                         %>
         <%#-------------------------------------------------%>
         <main class="col-12 col-lg-10 offset-lg-2 main" id="main-part" role="main">
-
-          <%#-------------------------------------------------%>
-          <%# Content header (page title/actions)             %>
-          <%#-------------------------------------------------%>
-          <%= render partial: 'spree/admin/shared/content_header' %>
-
-          <div class="row">
-            <%#-------------------------------------------------%>
-            <%# Alerts                                          %>
-            <%#-------------------------------------------------%>
-            <%= flash_alert(flash) %>
+          <div class="container">
 
             <%#-------------------------------------------------%>
-            <%# Main content                                    %>
+            <%# Content header (page title/actions)             %>
             <%#-------------------------------------------------%>
-            <div class="<%= content_for?(:sidebar) ? 'with-sidebar col-8 col-md-9' : 'col-12'  %>" id="content" data-hook>
-              <%= render partial: 'spree/admin/shared/table_filter' if content_for?(:table_filter)%>
-              <%= yield %>
-            </div>
+            <%= render partial: 'spree/admin/shared/content_header' %>
 
-            <%#-------------------------------------------------%>
-            <%# Inner aside                                     %>
-            <%#-------------------------------------------------%>
-            <% if content_for?(:sidebar) %>
-              <div class="col-4 col-md-3">
-                <%= render partial: 'spree/admin/shared/sidebar' %>
+            <div class="row">
+              <%#-------------------------------------------------%>
+              <%# Alerts                                          %>
+              <%#-------------------------------------------------%>
+              <%= flash_alert(flash) %>
+
+              <%#-------------------------------------------------%>
+              <%# Main content                                    %>
+              <%#-------------------------------------------------%>
+              <div class="<%= content_for?(:sidebar) ? 'with-sidebar col-8 col-md-9' : 'col-12'  %>" id="content" data-hook>
+                <%= render partial: 'spree/admin/shared/table_filter' if content_for?(:table_filter)%>
+                <%= yield %>
               </div>
-            <% end %>
+
+              <%#-------------------------------------------------%>
+              <%# Inner aside                                     %>
+              <%#-------------------------------------------------%>
+              <% if content_for?(:sidebar) %>
+                <div class="col-4 col-md-3">
+                  <%= render partial: 'spree/admin/shared/sidebar' %>
+                </div>
+              <% end %>
+            </div>
+            
           </div>
-
-
         </main>
       </div>
     </div>
