--- a/backend/app/views/spree/admin/general_settings/edit.html.erb
+++ b/backend/app/views/spree/admin/general_settings/edit.html.erb
@@ -47,7 +47,7 @@
                 <%= Spree.t(:clear_cache_warning) %>
               </div>
               <div data-hook="general_settings_clear_cache">
-                <%= button Spree.t(:clear_cache), 'ok', 'button', id: "clear_cache" %>
+                <%= button Spree.t(:clear_cache), 'recycle', 'button', id: "clear_cache" %>
               </div>
             </div>
           </div>
