--- a/backend/app/views/spree/admin/product_properties/_product_property_fields.html.erb
+++ b/backend/app/views/spree/admin/product_properties/_product_property_fields.html.erb
@@ -1,7 +1,7 @@
 <tr class="product_property fields" id="spree_<%= dom_id(f.object) %>" data-hook="product_property">
   <td class="move-handle">
     <% if f.object.persisted? && can?(:edit, f.object) %>
-      <span class="icon icon-move handle"></span>
+      <span class="icon icon-sort handle icon-md"></span>
       <%= f.hidden_field :id %>
     <% end %>
   </td>
