--- a/backend/app/views/spree/admin/shared/_account_nav.html.erb
+++ b/backend/app/views/spree/admin/shared/_account_nav.html.erb
@@ -5,9 +5,9 @@
       <i class="icon icon-account icon-white icon-lg"></i>
     </button>
 
-    <div class="dropdown-menu dropdown-menu-right mt-2 p-0">
+    <div class="dropdown-menu dropdown-menu-right mt-2 p-0 mr-2">
 
-      <div class="dropdown-item px-0 text-center">
+      <div class="dropdown-item px-0 text-center bg-light">
         <span class="d-block text-dark py-2 px-4"><%= try_spree_current_user.email %></span>
       </div>
 
@@ -46,7 +46,7 @@
 
       <button class="dropdown-item px-0" type="button">
         <%= link_to 'http://guides.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-
+        <i class="icon icon-help"></i>
           &nbsp;
           <%= Spree.t(:help_center) %>
         <% end %>
@@ -54,7 +54,7 @@
 
       <button class="dropdown-item px-0" type="button">
         <%= link_to 'http://slack.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-
+        <i class="icon icon-slack"></i>
           &nbsp;
           <%= Spree.t(:join_slack) %>
         <% end %>
@@ -62,7 +62,7 @@
 
       <button class="dropdown-item px-0" type="button">
         <%= link_to 'https://github.com/spree-contrib', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-
+        <i class="icon icon-extensions"></i>
           &nbsp;
           <%= Spree.t(:extensions_directory) %>
         <% end %>
