--- a/backend/app/views/spree/admin/users/edit.html.erb
+++ b/backend/app/views/spree/admin/users/edit.html.erb
@@ -52,7 +52,7 @@
         <span class="or"><%= Spree.t(:or)%></span>
 
         <%= form_tag spree.generate_api_key_admin_user_path(@user), method: :put do %>
-          <%= button Spree.t('regenerate_key', scope: 'api'), 'save' %>
+          <%= button Spree.t('regenerate_key', scope: 'api'), 'recycle' %>
         <% end %>
       </div>
 
